# expe3000

./: .gitignore  CMakeLists.txt  GEMINI.md  INSTALL_Linux.md  INSTALL_MACOSX.md  INSTALL_Windows.md  Makefile  README.md  experiment.csv  experiment1.csv  results.csv  run_example.bat  run_example.sh
.github/workflows/: build.yml
go-expe3000/: .expe3000_cache  README.md  audio.go  config.go  csv_parser.go  dlp.go  experiment.go  main.go  resources.go  results_20260228-233418.csv  results_20260228-233556.csv  results_20260301-085215.csv  results_20260301-085412.csv  stimuli.go
go-expe3000/cmd/expe3000/: cli.go
go-expe3000/cmd/expe3000-gui/: main.go
go-expe3000/engine/: config.go  csv_parser.go  experiment.go  gui_setup.go  run.go  stimuli.go
include/: config.h  experiment.h  resources.h  version.h
src/: audio.c  audio.h  config.c  csv_parser.c  csv_parser.h  dlp.c  dlp.h  experiment.c  gui_setup.c  gui_setup.h  main.c  resources.c  resources.h  stimuli.h  version.h
